# mbor

./: .gitignore  README.md
.github/workflows/: ci.yml
data/: UPSTREAM_ORACLE.md  fetch_dimacs_bay.sh  to_kahip.py
docs/: EVIDENCE.md  explained.html  index.html
rust/: Cargo.toml
rust/crates/mbor-baseline/: Cargo.toml
rust/crates/mbor-baseline/src/: lib.rs
rust/crates/mbor-baseline/tests/: exact.rs
rust/crates/mbor-bench/: Cargo.toml
rust/crates/mbor-bench/src/: main.rs
rust/crates/mbor-core/: Cargo.toml
rust/crates/mbor-core/benches/: core.rs
rust/crates/mbor-core/src/: graph.rs  label_setting.rs  lib.rs  pareto.rs
rust/crates/mbor-core/tests/: toy.rs
rust/crates/mbor-precompute/: Cargo.toml
rust/crates/mbor-precompute/src/: lib.rs
rust/crates/mbor-precompute/tests/: parity.rs
scripts/: build_kahip_and_run_oracle_msi.sh  run_msi_kahip.sh  run_msi_mbor.sh  run_upstream_oracle_msi.sh  submit_triton_conda_msi.slurm  submit_triton_msi.slurm
triton/: g4_kernels_bench.py  g5_precompute_gpu.py
triton/results/: g4_results.json  g5_results.json
